# livis-relay-daemon

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  config.example.json  package.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
docs/: ARCHITECTURE.md  AUTOMERGE-CANARY.md  AUTOMERGE-POLICY.md  CODEX-APPSERVER.md  CODEX-E2E-CANARY.md  HERMES-CANARY.md  LIVIS-RELAY-PROTOCOL-BOUNDARY.md  OPERATIONS.md  PROFILE-ACTIVATION.md  PROTOCOL-PROBES.md  RELEASING.md  SECURITY.md  UPSTREAM-UPGRADE.md
hermes-plugin/: README.md  __init__.py  adapter.py  plugin.yaml  pyproject.toml
hermes-plugin/tests/: conftest.py  test_adapter.py
protocol-profiles/: README.md  livis-authorized.example.json
scripts/: check-automerge-policy.ts  check-doc-links.ts  check-public-release.ts  check-versions.ts  check-wire-contract-append-only.ts  probe-protocol-local.ts
src/: config.ts  daemon.ts  identity.ts  index.ts  logger.ts  secrets.ts  session.ts  status-client.ts  types.ts  util.ts
tests/: activation.test.ts  auth.test.ts  auth_contract_probe.test.ts  automerge_policy.test.ts  codex_app_server_client.test.ts  codex_cli_doctor.test.ts  codex_execution_backend.test.ts  codex_runtime_layout.test.ts  connector.test.ts  daemon.test.ts  daemon_execution_backend.test.ts  daemon_upstream_guard.test.ts  execution_backend.test.ts  fake_livis.ts  helpers.ts  logger.test.ts  offline_guard.test.ts  profile_config.test.ts  profile_migration.test.ts  proof.test.ts  protocol.test.ts  (+11 more)
(+33 files in other folders)
