[project]
name = "livis-hermes-bridge"
version = "0.1.0"
description = "Hermes 到本地 livis-relayd 的薄平台适配器"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
  { name = "Jassy930" }
]
keywords = ["livis", "hermes", "relay"]
dependencies = [
  "websockets>=15,<16"
]

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3,<2"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
